selector adyacente y gral, creación carpeta img, modificación al css de los selectores

--- a/Bere-ops/Pasatiempos_Ver2/griega.html
+++ b/Bere-ops/Pasatiempos_Ver2/griega.html
@@ -22,7 +22,7 @@
 </header>
 
 <main class="layout">
-  <article>
+  <article id="griega">
     <h2><span style="font-size: 35px;">Cultura Griega 💖</span></h2>
     <section>
         <p>Me gusta mucho el tema de la mitología griega y las religiones que la practican.</p>
