--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -53,6 +53,14 @@
         </ul>
         <h2>Fecha de los commits: </h2>
         <p> 1 al 3 de Septiembre.</p>
+
+        <h2>Práctica 5</h2>
+        <p>En esta práctica utilizaremos los selectores vistos en clase y los aplicaremos en alguna de nuestras páginas de Pasatiempos_Ver2.</p>
+        <ul>
+            <li><a href="https://fdw52ad2025.github.io/website52/Bere-ops/selectores/index.html">Link Commits:</a></li>
+        </ul>
+        <h2>Fecha de los commits: </h2>
+        <p> 1 al 3 de Septiembre.</p>
     </main>
     <aside></aside>
     <footer>
