--- a/Bere-ops/selectores/index.html
+++ b/Bere-ops/selectores/index.html
@@ -14,91 +14,91 @@
         <section>
             <h2><strong>Selector universal</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/universal.png" alt="">
+            <img width="350" src="img/universal.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="700" src="/Bere-ops/selectores/img/resul_uni.png" alt="">
+            <img width="700" src="img/resul_uni.png" alt="">
         </section>
 
         <section>
             <h2><strong>Selector de tipo</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/tipo.png" alt="">
+            <img width="350" src="img/tipo.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="700" src="/Bere-ops/selectores/img/resul_tipo.png" alt="">
+            <img width="700" src="img/resul_tipo.png" alt="">
         </section>
 
         <section>
             <h2><strong>Selector por ID</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/id.png" alt="">
+            <img width="350" src="img/id.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="800" src="/Bere-ops/selectores/img/resul_id.png" alt="">
+            <img width="800" src="img/resul_id.png" alt="">
         </section>
 
         <section>
             <h2><strong>Selector por clase</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/clase.png" alt="">
+            <img width="350" src="img/clase.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="700" src="/Bere-ops/selectores/img/resul_clase.png" alt="">
+            <img width="700" src="img/resul_clase.png" alt="">
         </section>
 
         <section>
             <h2><strong>Selector de atributo</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/atributo.png" alt="">
+            <img width="350" src="img/atributo.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="350" src="/Bere-ops/selectores/img/resul_atributo.png" alt="">
+            <img width="350" src="img/resul_atributo.png" alt="">
         </section>
 
         <section>
             <h2><strong>Selector de lista</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/lista.png" alt="">
+            <img width="350" src="img/lista.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="300" src="/Bere-ops/selectores/img/resul_lista.png" alt="">
+            <img width="300" src="img/resul_lista.png" alt="">
         </section>
 
         <section>
             <h2><strong>Selector de descendientes</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/descendientes.png" alt="">
+            <img width="350" src="img/descendientes.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="800" src="/Bere-ops/selectores/img/resul_descendientes.png" alt="">
+            <img width="800" src="img/resul_descendientes.png" alt="">
         </section>
 
         <section>
             <h2><strong>Selector hijos directos</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/hijos_directos.png" alt="">
+            <img width="350" src="img/hijos_directos.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="700" src="/Bere-ops/selectores/img/resul_hijos_directos.png" alt="">
+            <img width="700" src="img/resul_hijos_directos.png" alt="">
         </section>
 
         <section>
             <h2><strong>Selector hermano adyacente</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/hermano_adyacente.png" alt="">
+            <img width="350" src="img/hermano_adyacente.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="800" src="/Bere-ops/selectores/img/resul_hermano_adyacente.png" alt="">
+            <img width="800" src="img/resul_hermano_adyacente.png" alt="">
         </section>
 
         <section>
             <h2><strong>Selector hermano general</strong></h2>
             <h3>Código CSS</h3>
-            <img width="350" src="/Bere-ops/selectores/img/hermano_general.png" alt="">
+            <img width="350" src="img/hermano_general.png" alt="">
 
             <h3>Resultado</h3>
-            <img width="800" src="/Bere-ops/selectores/img/resul_hermano_gral.png" alt="">
+            <img width="800" src="img/resul_hermano_gral.png" alt="">
         </section>
 
     </main>
