--- a/jesuscruz125/pasatiemposv2/pasatiempo1.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo1.html
@@ -25,9 +25,9 @@
     </header>
     <main>
         <section>
-            <article>
+            <article id="d02">
                 <h2>Basketball</h2>
-                <p class="deporte">Desde hace tiempo he visto diferentes juegos de la <abbr title="National Basketball Association" lang="en">NBA</abbr>, especialmente los más antiguos, donde participaron leyendas del baloncesto como <mark>Michael Jordan</mark>. Actualmente, mi principal inspiración para practicar este deporte es <mark>Stephen Curry</mark>.</p>
+                <p>Desde hace tiempo he visto diferentes juegos de la <abbr title="National Basketball Association" lang="en">NBA</abbr>, especialmente los más antiguos, donde participaron leyendas del baloncesto como <mark>Michael Jordan</mark>. Actualmente, mi principal inspiración para practicar este deporte es <mark>Stephen Curry</mark>.</p>
                 <img width="1000px" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs.yimg.com%2Fny%2Fapi%2Fres%2F1.2%2FEfK8K68pdbP0IFRSn2Ag.Q--%2FYXBwaWQ9aGlnaGxhbmRlcjt3PTEyMDA7aD04MDA-%2Fhttps%3A%2F%2Fs.yimg.com%2Fos%2Fcreatr-uploaded-images%2F2024-02%2Fc899c050-cb6c-11ee-b356-7190aa5f509b&f=1&nofb=1&ipt=be0761f4f52bbc4623cc8761146b24b6b6181c3dd9ff1e3c99bb56d264e6289d" alt=" Lebron James y Stephen Curry">
 
                 <p>Para profundizar en la historia de <span style="color: red;">Stephen Curry</span>, te recomiendo ver el documental <cite><a href="https://tv.apple.com/mx/movie/stephen-curry-infravalorado/umc.cmc.23v0wxaiwz60bjy1w4vg7npun" target="_blank">Stephen Curry: Underrated</a></cite>, disponible en Apple TV+.</p>
@@ -37,18 +37,18 @@
 
             <article>
                 <h2>Entrenamiento físico</h2>
-                <p class="deporte">Me gusta ejercitarme para mantener un cuerpo sano y estar <strong>físicamente activo</strong>. Aunque disfruto mucho de este pasatiempo, reconozco que requiere bastante esfuerzo, por lo que procuro hacerlo con el objetivo de <em>mantenerme saludable</em> y no tomarlo de manera demasiado competitiva.</p>
+                <p id="d03">Me gusta ejercitarme para mantener un cuerpo sano y estar <strong>físicamente activo</strong>. Aunque disfruto mucho de este pasatiempo, reconozco que requiere bastante esfuerzo, por lo que procuro hacerlo con el objetivo de <em>mantenerme saludable</em> y no tomarlo de manera demasiado competitiva.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Yko3GMseY40?si=LBL_8VJHlT0ydO-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                 <h3>Ejercicios favoritos</h3>
                 <p>Jalón al pecho</p>
-                <video width="500px" controls src="https://cdn.pixabay.com/video/2022/10/16/135162-761273567_large.mp4"></video>
+                <video class="d04" width="500px" controls src="https://cdn.pixabay.com/video/2022/10/16/135162-761273567_large.mp4"></video>
 
                 <p>Curl de bíceps</p>
-                <video width="500px" controls src="https://cdn.pixabay.com/video/2021/03/05/66991-521238787_large.mp4"></video>
+                <video class="d04" width="500px" controls src="https://cdn.pixabay.com/video/2021/03/05/66991-521238787_large.mp4"></video>
 
                 <p>Extensión de tríceps por encima de la cabeza</p>
-                <video width="500px" controls src="https://cdn.pixabay.com/video/2022/10/16/135160-761273559_large.mp4"></video>
+                <video class="d04" width="500px" controls src="https://cdn.pixabay.com/video/2022/10/16/135160-761273559_large.mp4"></video>
 
                 <h2>Mi rutina semanal</h2>
                 <table>
@@ -114,14 +114,14 @@
             <p>¡Muchas gracias por llegar hasta aquí!</p>
         </section>
     </main>
-    <aside>
+    <aside id="d01">
         <h3>Información adicional</h3>
         <p>Recuerda descansar después del gimnasio.</p>
         <p>Verifica tus clases de la facultad antes de salir.</p>
     </aside>
     <footer>
-        <p>&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
-        <address>Monterrey, Nuevo León</address>
+        <p id="d05">&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
+        <address id="d06">Monterrey, Nuevo León</address>
     </footer>
 </body>
 </html>
