--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -97,7 +97,7 @@
             </header>
             <article>
                 <p>En esta práctica utilizaremos los selectores vistos anteriormente en clase y los aplicaremos en alguna de nuestras páginas de la práctica 3 (PasatiemposV2).</p>
-
+                <p>Enlace página de selectores: <a href="selectoresp/index.html">Selectores index</a></p>
                 <ul>
                     <li>Link página selectores: <a href=""></a></li>
                     <li>Link commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-08&until=2025-09-10" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-08&until=2025-09-10</a></li>
