--- a/jesuscruz125/selectoresp/index.html
+++ b/jesuscruz125/selectoresp/index.html
@@ -3,140 +3,174 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="selectoresestilos.css">
+    <title>Tipos de selectores</title>
 </head>
 <body>
     <header>
         <h1>Selectores</h1>
     </header>
     <main>
-
+        <hr>
         <section>
             <header>
                 <h2>Selector universal</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/universal.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="500px" src="imgselectores/universalr.png" alt="">
         </section>
+
+        <hr>
 
         <section>
             <header>
                 <h2>Selector de tipo</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/tag.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="500px" src="imgselectores/tagr.png" alt="">
         </section>
 
+        <hr>
 
         <section>
             <header>
                 <h2>Selector por ID</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/id.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="500px" src="imgselectores/idr.png" alt="">
         </section>
+
+        <hr>
 
         <section>
             <header>
-                <h2>Selector por clases</h2>
+                <h2>Selector por clase</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/clases.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="350px" src="imgselectores/clasesr.png" alt="">
         </section>
-
+        <hr>
         <section>
             <header>
                 <h2>Selector de atributo</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/atributo.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="350px" src="imgselectores/atributor.png" alt="">
         </section>
+
+        <hr>
 
         <section>
             <header>
                 <h2>Selector de lista</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/listas.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/listasr.png" alt="">
         </section>
+
+        <hr>
 
         <section>
             <header>
                 <h2>Selector de descendientes</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/descendiente.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="500px" src="imgselectores/descendienter.png" alt="">
         </section>
+
+        <hr>
 
         <section>
             <header>
                 <h2>Selector hijos directos</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/hdirecto.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="500px" src="imgselectores/hdirector.png" alt="">
         </section>
 
         <section>
             <header>
-                <h2>Selector hermanos adyacentes</h2>
+                <h2>Selector hermano adyacente</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/adyacente.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="700px" src="imgselectores/adyacenter.png" alt="">
         </section>
 
+        <hr>
+
         <section>
+            <article>
             <header>
                 <h2>Selector hermano general</h2>
             </header>
+            <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="250px" src="imgselectores/hgeneral.png" alt="">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/testmeme.png" alt="">
+            <img width="500px" src="imgselectores/hgeneralr.png" alt="">
+            </article>
         </section>
 
-        
+        <hr>
 
 
     </main>
     <aside>
+
+        <h3>Tips de CSS</h3>
+        <ul>
+            <li>Usa comentarios para organizar tu CSS.</li>
+            <li>Evita repetir estilos, usa clases y selectores universales.</li>
+            <li>Recuerda que los ID son únicos, las clases se pueden repetir.</li>
+            <li>Prueba los selectores de atributo para formularios o links.</li>
+        </ul>
 
     </aside>
     <footer>
