--- a/jesuscruz125/selectoresp/index.html
+++ b/jesuscruz125/selectoresp/index.html
@@ -19,7 +19,7 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/universal.png" alt="">
+            <img width="250px" src="imgselectores/universal.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
             <img width="500px" src="imgselectores/universalr.png" alt="">
@@ -34,7 +34,7 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/tag.png" alt="">
+            <img width="250px" src="imgselectores/tag.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
             <img width="500px" src="imgselectores/tagr.png" alt="">
@@ -49,7 +49,7 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/id.png" alt="">
+            <img width="250px" src="imgselectores/id.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
             <img width="500px" src="imgselectores/idr.png" alt="">
@@ -64,10 +64,10 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/clases.png" alt="">
+            <img width="250px" src="imgselectores/clases.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
-            <img width="350px" src="imgselectores/clasesr.png" alt="">
+            <img width="350px" src="imgselectores/clasesr.png" alt="Captura de pantalla del resultado">
         </section>
         <hr>
         <section>
@@ -77,10 +77,10 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/atributo.png" alt="">
+            <img width="250px" src="imgselectores/atributo.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
-            <img width="350px" src="imgselectores/atributor.png" alt="">
+            <img width="350px" src="imgselectores/atributor.png" alt="Captura de pantalla del resultado">
         </section>
 
         <hr>
@@ -92,10 +92,10 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/listas.png" alt="">
+            <img width="250px" src="imgselectores/listas.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
-            <img width="250px" src="imgselectores/listasr.png" alt="">
+            <img width="250px" src="imgselectores/listasr.png" alt="Captura de pantalla del resultado">
         </section>
 
         <hr>
@@ -107,10 +107,10 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/descendiente.png" alt="">
+            <img width="250px" src="imgselectores/descendiente.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
-            <img width="500px" src="imgselectores/descendienter.png" alt="">
+            <img width="500px" src="imgselectores/descendienter.png" alt="Captura de pantalla del resultado">
         </section>
 
         <hr>
@@ -122,10 +122,10 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/hdirecto.png" alt="">
+            <img width="250px" src="imgselectores/hdirecto.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
-            <img width="500px" src="imgselectores/hdirector.png" alt="">
+            <img width="500px" src="imgselectores/hdirector.png" alt="Captura de pantalla del resultado">
         </section>
 
         <section>
@@ -135,10 +135,10 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/adyacente.png" alt="">
+            <img width="250px" src="imgselectores/adyacente.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
-            <img width="700px" src="imgselectores/adyacenter.png" alt="">
+            <img width="700px" src="imgselectores/adyacenter.png" alt="Captura de pantalla del resultado">
         </section>
 
         <hr>
@@ -151,10 +151,10 @@
             <hr>
 
             <h3>Código</h3>
-            <img width="250px" src="imgselectores/hgeneral.png" alt="">
+            <img width="250px" src="imgselectores/hgeneral.png" alt="Captura de pantalla del código">
 
             <h3>Resultado:</h3>
-            <img width="500px" src="imgselectores/hgeneralr.png" alt="">
+            <img width="500px" src="imgselectores/hgeneralr.png" alt="Captura de pantalla del resultado">
             </article>
         </section>
 
