--- a/SunnyWiltshire/index.html
+++ b/SunnyWiltshire/index.html
@@ -65,7 +65,7 @@
 
         <h2>Práctica 5</h2>
         <p>En base a los archivos de extención HTML sobre los pasatiempos versión 2 (práctica 3). Se creará otro sitio donde se muestren ejemplos de los selectores de CSS. Cada uno con su respectivo selector, código y resultado en la página.</p>
-        <p>Realicé n commits, del 08 al 10 de Septiembre.</p>
+        <p>Realicé 3 commits, del 08 al 10 de Septiembre.</p>
         <h3>Enlaces de la práctica 5:</h3>
         <ul>
             <li><a href="https://fdw52ad2025.github.io/website52/SunnyWiltshire/P5/index.html">Página selectores.</a></li>
