--- a/Bejesusrey/SelectoresCss/index.html
+++ b/Bejesusrey/SelectoresCss/index.html
@@ -14,9 +14,9 @@
     <main>
         <section>
             <h3>Selector Universal</h3>
-            <img src="" alt="">
+            <img width="200" src="imgselectores/selector1css.png" alt="Imagen del codigo css">
             <h3>Resultado</h3>
-            <img src="" alt="">
+            <img width="200" src="imgselectores/selector1result.png" alt="Imagen del resultado">
         </section>
         <hr>
 
