--- a/IlseOjeda/index.html
+++ b/IlseOjeda/index.html
@@ -66,8 +66,8 @@
     <section class="links">
             <h2>Links solicitados</h2>
             <ul>
-                <li><a href="pasatiemposv2/index.html">Página selectores</a></li>
-                <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-08-27&until=2025-08-27">Commits</a></li>
+                <li><a href="Practica 5/index.html">Página selectores</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-09-08&until=2025-09-09">Commits</a></li>
             </ul>
         </section>             
     </main>
