--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -49,6 +49,15 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-09-01&until=2025-09-03" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
+        <h3>Práctica 5</h3>
+        <p>En esta práctica se utilizaron los selectores vistos previamente en clase y se aplicaron a nuestras páginas sobre pasatiempos.</p>
+        <p>Realizado entre el 8 y 10 de septiembre del 2025</p>
+        <nav>
+            <ul>
+                <li><a href="selectores/index.html" target="_blank">Link Página Selectores</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-09-08&until=2025-09-10" target="_blank">Link Commits</a></li>
+            </ul>
+        </nav>
     </main>
     <aside></aside>
     <footer>
