--- a/RickyCorCam/pasatiempos2/index.html
+++ b/RickyCorCam/pasatiempos2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PASATIEMPOS2</title>
+    <link rel="stylesheet" href="styleindex.css">
 </head>
 <body>
     <header>
@@ -23,11 +24,15 @@
             </ul>
         </section>
         <br>
-        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdOCgBeWHQYQAQEaS2tu-QMn2kDL4JDY5B3594qBAyVFVo71w/formResponse" method="POST" target="_blank">
-            <input type="text" name="entry.2105416059" placeholder="Ingrese su nombre" required>
-            <input type="text" name="entry.670043046" placeholder="Ingrese su pasatiempo fav" required>
-            <button type="submit">Enviar</button>
-        </form>
+        <div id="form-1">
+            <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdOCgBeWHQYQAQEaS2tu-QMn2kDL4JDY5B3594qBAyVFVo71w/formResponse" method="POST" target="_blank">
+                <label for="nombre">Nombre:</label><br>
+                <input type="text" id="nombre" name="entry.2105416059" placeholder="Ingrese su nombre" required><br>
+                <label for="pasatiempo">Pasatiempo:</label><br>
+                <input type="text" id="pasatiempo" name="entry.670043046" placeholder="Ingrese su pasatiempo fav" required><br>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
     </main>
 </body>
 </html>
