Imagenes y pruebas selectores

--- a/ernesgarcia06/selectores/index.html
+++ b/ernesgarcia06/selectores/index.html
@@ -16,10 +16,10 @@
                 <h2>Selector Universal.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img src="img/selector universal.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img width=650px src="img/resultado_SelectorUniversal.jpg" alt="Resultado HTML">
         </section>
         <hr>
 
@@ -28,10 +28,10 @@
                 <h2>Selector de Tipo.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img width="500px" src="img/selectorDeTipo.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img width="850px" src="img/resultado_SelectorTipo.jpg" alt="Resultado HTML">
         </section>
         <hr>
 
@@ -40,10 +40,10 @@
                 <h2>Selector por ID.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img src="img/selectorID.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img width="600px" src="img/resultado_selectorID.jpg" alt="Resultado HTML">
         </section>
         <hr>
 
@@ -52,10 +52,10 @@
                 <h2>Selector por clase.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img src="" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img src="" alt="Resultado HTML">
         </section>
         <hr>
         
@@ -64,10 +64,10 @@
                 <h2>Selector por atributo.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img src="" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img src="" alt="Resultado HTML">
         </section>
         <hr>
 
@@ -76,10 +76,10 @@
                 <h2>Selector de lista.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img src="" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="">
+            <img src="" alt="Resultado HTML">
         </section>
         <hr>
 
