--- a/ernesgarcia06/pasatiemposver2/pagina5.html
+++ b/ernesgarcia06/pasatiemposver2/pagina5.html
@@ -68,7 +68,7 @@
     </main>
     <nav>
         <p><i>Te espero en el estadio, saludos</i>.</p>
-        <div class="imagenes">
+        <div class="videos">
             <ul>
                 <video controls width="400" src="https://www.pexels.com/es-es/download/video/2430839/"></video>
             </ul>
