--- a/ernesgarcia06/selectores/index.html
+++ b/ernesgarcia06/selectores/index.html
@@ -16,6 +16,7 @@
                 <h2>Selector Universal.</h2>
             </header>
             <h3>Código CSS</h3>
+            <p>A todo lo que este dentro del elemento img1 se le aplica el siguiente estilo:</p>
             <img src="img/selector universal.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
@@ -28,6 +29,7 @@
                 <h2>Selector de Tipo.</h2>
             </header>
             <h3>Código CSS</h3>
+            <p>Al h1 que esta dentro del elemnto con ID t01 se le aplicará el siguiente estilo: </p>
             <img width="500px" src="img/selectorDeTipo.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
@@ -40,6 +42,7 @@
                 <h2>Selector por ID.</h2>
             </header>
             <h3>Código CSS</h3>
+            <p>A lo que este dentro del elemento v01 se le aplicará el siguiente estilo:</p>
             <img src="img/selectorID.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
@@ -52,10 +55,11 @@
                 <h2>Selector por clase.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="Codigo CSS">
+            <p>A todo los elementos con la clase "contenido" se le aplicará el siguiente estilo:</p>
+            <img src="img/selectorClase.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="Resultado HTML">
+            <img src="img/resultado_SelectorClase.jpg" alt="Resultado HTML">
         </section>
         <hr>
         
@@ -64,10 +68,10 @@
                 <h2>Selector por atributo.</h2>
             </header>
             <h3>Código CSS</h3>
-            <img src="" alt="Codigo CSS">
+            <img src="img/selectorAtributo.jpg" alt="Codigo CSS">
 
             <h3>Resultado en html</h3>
-            <img src="" alt="Resultado HTML">
+            <img src="img/resultado_SelectorAtributo.jpg" alt="Resultado HTML">
         </section>
         <hr>
 
