--- a/ernesgarcia06/pasatiemposver2/pagina1.html
+++ b/ernesgarcia06/pasatiemposver2/pagina1.html
@@ -19,12 +19,12 @@
                 <header>
                         <p>Antes solo me gustaba jugar FIFA, que a partir del 2024 cambio de nombre a <strong>EAFC</strong>, y en el cual podía pasar muchas horas jugando al dia sin aburrirme.</p>
                         <p>Mi colección empieza en FIFA 11 que fue el primero que jugue, después dure un tiempo sin comprarlos y algunos años después compre el FIFA 14, el año siguiente el 15 y a partir del FIFA 18 tengo hasta el ahora llamado <strong>EAFC 25</strong> sin que falte alguno.</p>
-                    <div class="imagenes">
-                        <div id="img1">
-                            <img src="img/fifa.jpg" alt="Persona jugando un videojuego">
-                            <p>Persona jugando</p>
+                        <div class="videos">
+                            <div id="img1">
+                                <img src="img/fifa.jpg" alt="Persona jugando un videojuego">
+                                <p>Persona jugando</p>
+                            </div>
                         </div>
-                    </div>
                 </header>
             </section>  
           </article>
@@ -39,7 +39,7 @@
           </article>
     </main>
     <nav>
-        <div class="imagenes">
+        <div class="videos">
             <ul>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/IWJk7Bmgq7U?si=jyJqbdXVb3Wsm3NY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </ul>
