--- a/ernesgarcia06/pasatiemposver2/pagina2.html
+++ b/ernesgarcia06/pasatiemposver2/pagina2.html
@@ -44,7 +44,7 @@
     </main>
     <nav>
         <p>Recomiendo ver el video que se presenta a continuación para que se pueda lograr entender la emoción que se sintio.</p>
-        <div class="imagenes">
+        <div class="videos">
             <div id="v01">
                 <ul>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/l7tPl3yVBnQ?si=VnSVKYGd2-WEcEq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
