--- a/ernesgarcia06/pasatiemposver2/pagina4.html
+++ b/ernesgarcia06/pasatiemposver2/pagina4.html
@@ -19,7 +19,7 @@
                 <header>
                     <p>Me gusta mucho ir a los estadios, en este mes he ido mucho al estadio de los Sultanes de Monterrey, llamado <strong>WALMART PARK</strong> en donde hay un gran ambiente y que si entiendes el béisbol hará que quieras ir todos los dias.</p>
                     <p>Aqui una muestra de lo que se vive en una inauguración de temporada en el <strong>PALACIO SULTAN</strong>.</p>
-                    <div class="imagenes">
+                    <div class="videos">
                         <nav>
                             <ul>
                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/hfYiv5wDXmE?si=zWCzFHq1f6hBasgv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -34,7 +34,7 @@
                 <header>
                     <p>Tambien me gusta ir al Estadio Universitario, casa de mis Tigres, en donde tambien se vive un gran ambiente y se apoya con corazón, he vivido muchas emociones aqui y siempre sera mi lugar favorito.</p>
                     <p>Aqui algo de lo que se vive en el <strong>VOLCÁN</strong>.....</p>
-                    <div class="imagenes">
+                    <div class="videos">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/UgfDbMWu39s?si=QKJowsCwp48cClht" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </header>
