--- a/RickyCorCam/index.html
+++ b/RickyCorCam/index.html
@@ -28,7 +28,7 @@
 
                 Fecha commits: 13 al 15 de Agosto.</p>
             <article>
-                <h1>Links de la practica 1</h1>
+                <h2>Links de la practica</h2>
                 <ul>
                     <li><a href="https://github.com/RickyCorCam/Practica1" target="_blank">Link del Repositorio</a></li>
                     <li><a href="https://rickycorcam.github.io/Practica1/" target="_blank">Link del Sitio Web</a></li>
@@ -46,7 +46,7 @@
                 El archivo index.html será la página personal de cada estudiante. Se solicitó agregar los links de la primera práctica.</p>
 
             <article>
-                <h1>Links de la practica 2</h1>
+                <h2>Links de la practica</h2>
                 <ul>
                     <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/index.html">Link de la pagina personal</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-08-20&until=2025-08-22">Links commits</a></li>
@@ -69,7 +69,7 @@
                 Fecha commits: 27 al 29 de Agosto.
             </p>
             <article>
-                <h1>Links de la practica 3</h1>
+                <h2>Links de la practica</h2>
                 <ul>
                     <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/pasatiempos2/index.html">Link de la pagina pasatiempo version 2</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-08-27&until=2025-08-27">Link commit trabajo en clase 27 de agosto</a></li>
@@ -87,9 +87,22 @@
                 Fecha commits: 1 al 3 de Septiembre.
             </p>
             <article>
-                <h1>Links de la practica 4</h1>
+                <h2>Links de la practica</h2>
                 <ul>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-09-01&until=2025-09-03">Links commits del 1 al 3 de septiembre</a></li>
+                </ul>
+            </article>
+        </section>
+        <section>
+            <hr>
+            <h1>Practica 5</h1>
+            <p>Utilizando sus archivos HTML sobre sus pasatiempos versión 2. Crear un sitio donde se muestre por lo menos un ejemplo de cada selector CSS.</p>
+            <br>
+            <article>
+                <h2>Links de la practica</h2>
+                <ul>
+                    <li><a href="selectores/index.html"></a>Link Pagina Selectores</li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-09-08&until=2025-09-10">Link commits 8 al 10 de septiembre</a></li>
                 </ul>
             </article>
         </section>
