--- a/RickyCorCam/index.html
+++ b/RickyCorCam/index.html
@@ -101,7 +101,7 @@
             <article>
                 <h2>Links de la practica</h2>
                 <ul>
-                    <li><a href="selectores/index.html"></a>Link Pagina Selectores</li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/selectores/index.html"></a>Link Pagina Selectores</li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-09-08&until=2025-09-10">Link commits 8 al 10 de septiembre</a></li>
                 </ul>
             </article>
