Edicion en el  index

--- a/aaronrdzr/selectores/index.html
+++ b/aaronrdzr/selectores/index.html
@@ -81,5 +81,8 @@
         <p>Resultado</p>
         <img src="imgp5/Resultadohijosgres.png" alt="Resultado hermanos generales" width="900">
     </section>
+    <hr>
+    <small><a href="mailto=aaron.rodriguezr@uanl.edu.mx">aaron.rodriguezr@uanl.edu.mx</a></small>
+    <small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico</small>
 </body>
 </html>
