Edicion en el estilos.css

--- a/aaronrdzr/selectores/index.html
+++ b/aaronrdzr/selectores/index.html
@@ -13,7 +13,7 @@
     <section>
         <h3>Selector Universal</h3>
         <p>Código CSS</p>
-        <img src="imgp5/selectoruniv.png" alt="Codigo CSS Selector universal" width="400">
+        <img src="imgp5/selectoruniv.png" alt="Código CSS Selector universal" width="400">
         <p>Resultado</p>
         <img src="imgp5/resultuniv.png" alt="Resultado Selector universal" width="400">
     </section>
@@ -27,62 +27,62 @@
     <section>
         <h3>Selector por ID</h3>
         <p>Código CSS</p>
-        <img src="imgp5/idcss.png" alt="Codigo CSS para Selector ID" width="400">
+        <img src="imgp5/idcss.png" alt="Código CSS para Selector ID" width="400">
         <p>Resultado</p>
         <img src="imgp5/idresultado.png" alt="Resultado Selector ID" width="900" height="50">
     </section>
     <section>
         <h3>Selector por Clase</h3>
         <p>Código CSS</p>
-        <img src="imgp5/ClassCSS.png" alt="Codigo CSS para Selector por Clase" width="400">
+        <img src="imgp5/ClassCSS.png" alt="Código CSS para Selector por Clase" width="400">
         <p>Resultado</p>
         <img src="imgp5/RESULTADOclass.png" alt="Resultado Selector por Clase" width="400" >
     </section>
     <section>
         <h3>Selector de atributo</h3>
         <p>Código CSS</p>
-        <img src="imgp5/CSSatributo.png" alt="Codigo CSS Selector por atributo" width="400">
+        <img src="imgp5/CSSatributo.png" alt="Código CSS Selector por atributo" width="400">
         <p>Resultado</p>
         <img src="imgp5/ResultAtributo.png" alt="Resultado Selector por Atributo"width="400">
     </section>
     <section>
         <h3>Selector por lista</h3>
-        <p>Codigo CSS</p>
-        <img src="imgp5/SelectorxlistaCSS.png" alt="Codigo CSS Selector por lista" width="400">
+        <p>Código CSS</p>
+        <img src="imgp5/SelectorxlistaCSS.png" alt="Código CSS Selector por lista" width="400">
         <p>Resultado</p>
         <img src="imgp5/resultadoselectorxlista.png" alt="Resultado Selector por lista" width="1000">
 
     </section>
     <section>
         <h3>Selector de descendientes</h3>
-        <p>Codigo CSS</p>
-        <img src="imgp5/cssdescend.png" alt="Codigo CSS Selector de descendientes" width="400">
+        <p>Código CSS</p>
+        <img src="imgp5/cssdescend.png" alt="Código CSS Selector de descendientes" width="400">
         <p>Resultado</p>
         <img src="imgp5/Descendientes.png" alt="Resultado Selector de descendientes" width="500">
     </section>
     <section>
         <h3>Selector hijos directos</h3>
-        <p>Codigo CSS</p>
-        <img src="imgp5/hijodirectocss.png" alt="Codigo CSS Selector hijos directos" width="400">
+        <p>Código CSS</p>
+        <img src="imgp5/hijodirectocss.png" alt="Código CSS Selector hijos directos" width="400">
         <p>Resultado</p>
-        <img src="imgp5/resultadojijode.png" alt="Resultado de hijos directos" width="400">
+        <img src="imgp5/resultadojijode.png" alt="Resultado de Selector hijos directos" width="400">
     </section>
     <section>
         <h3>Selector hermano adyacente</h3>
-        <p>Codigo CSS</p>
-        <img src="imgp5/cssadyc.png" alt="Codigo CSS de Selector de hermano adyacente" width="400">
+        <p>Código CSS</p>
+        <img src="imgp5/cssadyc.png" alt="Código CSS de Selector de Selector hermano adyacente" width="400">
         <p>Resultado</p>
         <img src="imgp5/adyacresultado.png" alt="Resultado de Selector hermanos adyacentes" width="900">
     </section>
     <section>
         <h3>Selector hermano general</h3>
-        <p>Codigo CSS</p>
-        <img src="imgp5/hijosgrlescss.png" alt="Codigo CSS de hermanos generales" width="400">
+        <p>Código CSS</p>
+        <img src="imgp5/hijosgrlescss.png" alt="Código CSS de Selector hermanos generales" width="400">
         <p>Resultado</p>
-        <img src="imgp5/Resultadohijosgres.png" alt="Resultado hermanos generales" width="900">
+        <img src="imgp5/Resultadohijosgres.png" alt="Resultado Selector hermanos generales" width="900">
     </section>
     <hr>
     <small><a href="mailto=aaron.rodriguezr@uanl.edu.mx">aaron.rodriguezr@uanl.edu.mx</a></small>
-    <small>Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico</small>
+    <small><p class="ubi">Ciudad Universitaria, San Nicolas de los Garza, Nuevo Leon, Mexico.</p></small>
 </body>
 </html>
