--- a/aaronrdzr/index.html
+++ b/aaronrdzr/index.html
@@ -30,7 +30,7 @@
         <h2>Practica 4</h2>
         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=aaronrdzr&since=2025-09-01&until=2025-09-03">Commits 1-3 Septiembre</a></li>
         <h2>Practica 5</h2>
-        <li><a href="file:///c%3A/Users/aaron/Documents/LTI/website52/aaronrdzr/selectores/index.html">Link Sitio</a></li>
+        <li><a href="https://fdw52ad2025.github.io/website52/aaronrdzr/selectores/index.html">Link Sitio</a></li>
         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=aaronrdzr&since=2025-09-08&until=2025-09-09">Commits 8-10 Septiembre</a></li>
       </header>
         
